<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@mipmap/whitebackground"
            android:orientation="vertical"
            tools:context=".help_info"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
    >
        <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold"
        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/appDescription"
                android:textColor="@android:color/black"
                android:textSize="16sp"

        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/features"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold"
        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minPayMode"
                android:textColor="@android:color/black"
                android:textSize="24sp"

        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minPayDescription"
                android:textColor="@android:color/black"
                android:textSize="16sp"

        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/batchPayMode"
                android:textColor="@android:color/black"
                android:textSize="24sp"

        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/batchPayDescription"
                android:textColor="@android:color/black"
                android:textSize="16sp"

        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priorityPayMode"
                android:textColor="@android:color/black"
                android:textSize="24sp"

        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priorityPayDescription"
                android:textColor="@android:color/black"
                android:textSize="16sp"

        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/redLineTitle"
                android:textColor="@android:color/black"
                android:textSize="24sp"

        >
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/redLine"
                android:textColor="@android:color/black"
                android:textSize="16sp"

        >
        </TextView>

    </LinearLayout>

</ScrollView>