<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registerCard"
        android:orientation="vertical"
        android:weightSum="15"
        android:background="@mipmap/whitebackground"
>
    <!--New Card Info -->
    <GridLayout
            android:columnCount="1"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="90dp"

    >
        <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
        >
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText

                        android:id="@+id/textView"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:labelFor="@id/textView"
                        android:contentDescription="@string/cardName"
                        android:maxLength="20"
                />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>
    <TextView
                        android:text="@string/regCard"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/textView2"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
    />
    <!--Balance on Card -->
    <GridLayout
            android:columnCount="1"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="0dp"

    >
        <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
        >
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText

                        android:id="@+id/textView3"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="4"
                        android:labelFor="@id/textView3"
                        android:contentDescription="@string/cardName"

                />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>
    <TextView
            android:text="@string/balance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
    />
    <!--APR Rate -->
    <GridLayout
            android:columnCount="1"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="0dp"

    >
        <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
        >
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText

                        android:id="@+id/textView5"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:hint="@string/aprDecimal"

                />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>
    <TextView
            android:text="@string/APR"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
    />
    <!--Minimum Payment-->
    <GridLayout
            android:columnCount="1"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="0dp"

    >
        <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
        >
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText

                        android:id="@+id/textView7"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="4"
                        android:labelFor="@id/textView7"
                        android:contentDescription="@string/cardName"
                />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>
    <TextView
            android:text="@string/minPay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/textView8"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
    />
    <!--Payment Due Date-->
    <GridLayout
            android:columnCount="1"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="0dp"

    >
        <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
        >
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView

                        android:inputType="none"
                        android:id="@+id/textView9"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:importantForAutofill="no"
                        android:textSize="20sp"
                        android:hint="@string/date"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>
    <TextView
            android:text="@string/dueDate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/textView10"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
    />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            app:srcCompat="@mipmap/sm_logo"
            android:id="@+id/imageButton"
            android:layout_weight="1"
            android:contentDescription="@string/application_logo"
            android:onClick="sendInfo"
    />
    <TextView
            android:text="@string/sub"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_weight="1"
    />


</LinearLayout>