<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/whitebackground"
        android:orientation="vertical"
        android:weightSum="11"
        tools:context=".homeMenu">


    <RelativeLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
    >
        <ImageView
                android:src="@mipmap/sm_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:id="@+id/nameLogo"
                android:contentDescription="@string/openName"
                android:onClick="helpMenu"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpButton"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
        >
        </TextView>

    </RelativeLayout>

    <GridLayout
            android:columnCount="1"
            android:rowCount="3"
            android:columnOrderPreserved="false"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <!--Row 1 -->
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="registerCard"
            >

                <TextView
                        android:text="@string/newCard"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/smcreditcard"

                />



            </androidx.cardview.widget.CardView>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="viewCard"
            >
                <TextView
                        android:text="@string/myCards"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/wallet"

                />



            </androidx.cardview.widget.CardView>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <!--Row 2 -->
        <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:onClick="minPay"
        >
            <TextView
                    android:text="@string/minDue"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/minpayicon"

            />



        </androidx.cardview.widget.CardView>
        <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:onClick="batchMode"
        >
            <TextView
                    android:text="@string/batchMode"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/batchmodeicon"
            />



        </androidx.cardview.widget.CardView>
        <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
    </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <!--Row 3 -->
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="chosePriority"
            >
                <TextView
                        android:text="@string/priorityMode"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/prioritymode"
                />



            </androidx.cardview.widget.CardView>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="clearCards"
            >
                <TextView
                        android:text="@string/recycle"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/recyclebin"
                />



            </androidx.cardview.widget.CardView>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
        </LinearLayout>







    </GridLayout>






</LinearLayout>